    functions. Multiple local variables (of the same type) can be defined in
    the initialization section of a for-statement, A single variable can be
    defined in the condition phrase of an if- and while-statement. Unless
    initialized such variables represent a `false' condition.

  * Character constants are supported and are converted to single-character
    string constants.

  * Fixed a bug in the printf family of functions: these functions now return
    the number of printed arguments (as documented in icmake(1)'s man-page).

  * Fixed a bug in handling decrement and increment operators: previously
    their resulting wasn't pushed on the stack when used in return statements,
    causing a stack underflow.

  * Drive specifiers are not supported anymore

  * The function glob() is now assumed available.

  * The internal code organization was significantly changed. Code belonging
    together is now collected in its own subdirectory, where the subdir-name
    is used as first part of the name of `public' functions (while their
    source names do not start with the subdir name (e.g. symtab_push is found
    in symtab/push.c), while their own support functions start with an
    abbreviated subdir-name, both in their names and in their source filenames
    (e.g., st_addVar is found in symtab/staddvar.c). Also, within
    subdirectories 'dirname.ih' files contain all declarations that are
    required only by the sources in that directory, while 'dirname.h' files
    contain all declarations required by other parts of icmake programs that
    use the subdirectory's `public' functions. Because of this reorganization
    several old files (like  rss/ic*h files) became obsolete and were
    removed. 

 *  The -q and -b options are not supported anymore.

 *  The -e option replaces the previously defined -b option.

 *  The -v option writes icmake's version to the standard output stream
    (terminating icmake).



icmake (7.23.02)
