@@ -3,7 +3,6 @@
 /* 
     Global variables are written like this:
         1st byte: their type
-//        next 2 bytes: their value     now by initialization code
 */
     
 void symtab_writeGlobals(FILE *bin)
@@ -15,7 +14,5 @@ void symtab_writeGlobals(FILE *bin)
     {        
         char type = (char)begin->type & ~e_var;
         util_out(bin, &type, sizeof(char));
-        
-//FBB        util_out(bin, &begin->value, sizeof(uint16_t));
     }
 }
